yoshimi 1.7.0 M

2020-3-28 Will
* Merged in panning law control.
* Added 'Yet Another Flute" to 'Companion' bank.
* Temporarily disabled hiding engine type colours.
  Related code will be removed later if no objections.
* Unified GUI numbering of config window files.
* First trial of improved GUI window positioning.
  Only controller windows so far.
* Create GUI window diretory!

2020-3-26 Will
* Aftertouch fully MIDI-learnable.
  Also blocks normal control action by default.
* AT GUI follows standard right button close practice.
* Updated docs.

2020-3-22 Will
* Added Filter Q to aftertouch.
* Re-enabled negative filter cutoff.
* Updated docs.
* Made channel AT emulation in MusicIO.cpp configurable.

2020-3-21 Will
* Enabled CLI access to aftertouch.
* Updated docs.

2020-3-20 Will
* Move aftertouch CC selection fully into 'part'.
  This enusres all parts independently see it.

2020-3-19 Will
* Stop state file opening an empty MIDI learn window.

2020-3-18 Will
* Merged in revised legato code from Iain.
* Implemented Channel aftertouch.
  More to do on this.
* Completed Channel aftertouch.
* Second attempt at completion :(

2020-3-17 Will
* Implemented Modulation PolyAT.

2020-3-15 Will
* Created GUI for PolyAT.
  Can't yet run two effects at the same time.
* PolyAT saved in patch sets.
* Temporarly hid PolyAT negative filter cutoff.
  It doesn't work at all well :(
* Both PolyAT effect can now be run together.

2020-3-12 Will
* Small refinements to PolyAT.

2020-3-10 Will
* Merged in first trial of PolyAT.
  Currently fixed as filter cutoff.
* Corrected Mixer channel colours for Solo.
* PolyAT can do lowering as well as raising filter cutoff.
* Defined some PolyAT types in globals.h

2020-3-7 Will
* Installed full placeholder for key pressure detection.
* Provided emulator for key pressure in MusicIO.cpp.

2020-3-6 Will
* Patched in additional Solo type 'Channel' from Matthew.
  Made a few minor corrections.
* Applied some optimisations to Solo Channel mode.